--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(compute_strata_alpha)
 export(fit_cox_cluster)
 export(fit_cox_td)
 export(fit_cox_timedep_advanced)
+export(fit_cox_weighted)
 export(fit_km)
 export(fit_km_auto)
 export(logrank_grid)
